# RTDDS

./: CMakeLists.txt
include/: JointStateMsg.hpp  RobotModel.hpp  TrajectoryGenerator.hpp  TrajectoryTypes.hpp  XddpReader.hpp  rt_sockets.hpp
scripts/: setup_fastdds.sh
src/dds/: CMakeLists.txt  JointStatePublisher.cpp  JointStateSubscriber.cpp
src/rt/: CMakeLists.txt  client.cpp  main.cpp  rt_sockets.cpp  server.cpp
